2008-04-08  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* classic/logplayer.cpp:
	* classic/logplayer.h:
	* classic/nowindow.cpp:
	* qt4/main_data.cpp:
	* rcsslogplayer/rcsslogplayer.pro:
	* tool/Makefile.am:
	- fixed compliser warning.
	- added profiling code.

	* classic/Makefile.am:
	* icons/rcss.ico:
	* rcsslogplayer.pro:
	* rcsslogplayer/rcsslogplayer.pro:
	* qt4/disp_holder.cpp:
	* qt4/main.cpp:
	* qt4/main_window.cpp:
	* qt4/options.cpp:
	* qt4/player_painter.cpp:
	* qt4/rcsslogplayer.rc:
	- added qmake project files.

	* qt4/main_data.cpp:
	* rcsslogplayer/parser.cpp:
	- added code for profiling.
	- improved parser performance.

	* configure.ac:
	* classic/Makefile.am:
	* classic/logplayer.cpp:
	* qt4/disp_holder.cpp:
	* qt4/main.cpp:
	* qt4/main_data.cpp:
	* qt4/main_data.h:
	* qt4/main_window.cpp:
	* qt4/main_window.h:
	* qt4/options.cpp:
	* qt4/rcsslogplay:
	* rcsslogplayer/Makefile.am:
	* rcsslogplayer/gzfstream.cpp:
	* rcsslogplayer/gzfstream.h:
	* tool/Makefile.am:
	* tool/rcg3to4.cpp:
	* tool/rcg4to3.cpp:
	* tool/rcgsplit.cpp:
	- added gzfstream to the rcgparser library.
	- added progress dialog while log parsing.

2008-04-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/main.cpp:
	- added copyright notice.

	* classic/logplayer.cpp:
	* classic/logplayer.h:
	* qt4/main_window.cpp:
	* rcsslogplayer/handler.h:
	* tool/rcg2xml.cpp:
	* tool/rcg3to4.cpp:
	* tool/rcg4to3.cpp:
	* tool/rcgsplit.cpp:
	- fixed bugs in log parsing.

	* qt4/disp_holder.cpp:
	* qt4/disp_holder.h:
	* qt4/log_player.cpp:
	* qt4/log_player.h:
	* qt4/log_player_tool_bar.cpp:
	* qt4/log_player_tool_bar.h:
	* qt4/main_data.cpp:
	* qt4/main_data.h:
	* qt4/main_window.cpp:
	* qt4/main_window.h:
	* qt4/player_painter.cpp:
	* qt4/remote_monitor.cpp:
	* rcsslogplayer/parser.cpp:
	* rcsslogplayer/util.cpp:
	* tool/rcg3to4.cpp:
	- fixed bugs in the older version log parsing.
	- implemented a function of data segment recording.

	* qt4/draw_info_painter.cpp: