@@ -379,3 +379,23 @@ PlayerTypeDialog::showEvent( QShowEvent * event )
 
     event->accept();
 }
+
+/*-------------------------------------------------------------------*/
+/*!
+
+*/
+void
+PlayerTypeDialog::wheelEvent( QWheelEvent * event )
+{
+
+    if ( event->delta() < 0 )
+    {
+        this->setWindowOpacity( std::max( 0.1, this->windowOpacity() - 0.05 ) );
+    }
+    else
+    {
+        this->setWindowOpacity( std::min( 1.0, this->windowOpacity() + 0.05 ) );
+    }
+
+    event->accept();
+}
